puse alexander en negrita

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>\N Alexander Marrero Bermudez</p>
+    <p><strong>Alexander Marrero Bermudez</strong></p>
     <p>04/12/2024 17:52</p>
     <img src="img/imagenExamen.png" alt="">
 </body>
